fix(ugcs): halte UCS Bridge Java 17 kompatibel